# vtebench

./: .travis.yml  Cargo.toml  README.md  generate-benchmarks.sh  gnuplot.sh  gnuplot_summary.sh
.builds/: freebsd.yml  linux.yml  rustfmt.yml  style.yml
benchmarks/cursor_motion/: benchmark
benchmarks/dense_cells/: benchmark
benchmarks/light_cells/: benchmark  setup
benchmarks/medium_cells/: vim_session
benchmarks/missing/: benchmark
benchmarks/scrolling/: benchmark  setup
benchmarks/scrolling_bottom_region/: setup
benchmarks/scrolling_bottom_small_region/: benchmark  setup
benchmarks/scrolling_fullscreen/: benchmark
benchmarks/scrolling_top_region/: setup
benchmarks/scrolling_top_small_region/: setup
benchmarks/sync_medium_cells/: benchmark  vim_session
benchmarks/unicode/: benchmark  symbols
benchmarks/yes/: benchmark
ci/: script.sh
extra_benchmarks/missing/: benchmark
gnuplot/: detailed.sh  gnuplot.sh  gnuplot_separate.sh  summary.sh
src/: bench.rs  cli.rs  context.rs  main.rs  result.rs
src/format/: dat.rs  mod.rs  stdout.rs
