[package]
name = "vtebench"
version = "0.3.1"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "MIT/Apache-2.0"
description = "Terminal emulators benchmark"
readme = "README.md"
repository = "https://github.com/alacritty/vtebench"
edition = "2021"
rust-version = "1.74.0"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
walkdir = "2.3.1"
